修改解析地址

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="adUrls">
+
+
+<!--            穷二代             -->
 <!--        <item>js.letvcdn.com</item>-->
         <item>362prtn.ktionz.com</item>
 <!--        <item>jx.3dtou.cn</item>-->
