1. 增加背景图片 2. 修改解析地址

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -5,31 +5,31 @@
 
 <!--            穷二代             -->
 <!--        <item>js.letvcdn.com</item>-->
-        <item>362prtn.ktionz.com</item>
+<!--        <item>362prtn.ktionz.com</item>-->
 <!--        <item>jx.3dtou.cn</item>-->
 
-        <item>c.cnzz.com</item>
-        <item>s22.cnzz.com</item>
-        <item>s96.cnzz.com</item>
-        <item>vpn.tuodupingguomiao.com</item>
-        <item>7c9.38udf6hc9.com</item>
-        <item>pv.sohu.com</item>
-        <item>update.nxflv.com</item>
-        <item>st.ganwy.cn</item>
-        <item>jump.xyzmm.cn</item>
-        <item>t.cn/AiB82LUS</item>
-        <item>dc.kdmmm.cn</item>
-        <item>nohacks.taobao.com</item>
-        <item>v.nmbaojie.com</item>
-        <item>bb.nmbaojie.com</item>
-        <item>cdn.bootcss.com</item>
-        <item>vpn.baolq666.com</item>
-        <item>img3.kfkfl.cn</item>
-        <item>s13.cnzz.com</item>
-        <item>js.kfkfl.cn</item>
-        <item>img.lianmengma.com</item>
-        <item>hnhbyxdq</item>
-        <item>hongyangpai</item>
-        <item>jxwe.kidsvenice.com</item>
+<!--        <item>c.cnzz.com</item>-->
+<!--        <item>s22.cnzz.com</item>-->
+<!--        <item>s96.cnzz.com</item>-->
+<!--        <item>vpn.tuodupingguomiao.com</item>-->
+<!--        <item>7c9.38udf6hc9.com</item>-->
+<!--        <item>pv.sohu.com</item>-->
+<!--        <item>update.nxflv.com</item>-->
+<!--        <item>st.ganwy.cn</item>-->
+<!--        <item>t.cn/AiB82LUS</item>-->
+<!--        <item>jump.xyzmm.cn</item>-->
+<!--        <item>dc.kdmmm.cn</item>-->
+<!--        <item>nohacks.taobao.com</item>-->
+<!--        <item>v.nmbaojie.com</item>-->
+<!--        <item>bb.nmbaojie.com</item>-->
+<!--        <item>cdn.bootcss.com</item>-->
+<!--        <item>vpn.baolq666.com</item>-->
+<!--        <item>img3.kfkfl.cn</item>-->
+<!--        <item>s13.cnzz.com</item>-->
+<!--        <item>js.kfkfl.cn</item>-->
+<!--        <item>img.lianmengma.com</item>-->
+<!--        <item>hnhbyxdq</item>-->
+<!--        <item>hongyangpai</item>-->
+<!--        <item>jxwe.kidsvenice.com</item>-->
     </string-array>
 </resources>
